# girl_from_ipanema

./: autoencoder_class.py  basic_cnn_block.py  basic_rnn_class.py  cnn_block_for_raw.py  cnn_class.py  cnn_class_0.py  cnn_class_1.py  draw_graph.py  find_file_class.py  find_files.py  from_npz_train_data.py  header.py  hello.py  make_train_data.py  module.py  multihead_attention_block.py  mv_mp4_files.sh  playing_00.py  playing_01.py  preprocessing_for_data.py  pyproject.toml  raw_signal_encoder.py  reshape_exercise.py  residual_block.py  residual_block_1D.py  rnn_class.py  test.py  toy_detect_position.py  toy_mnist_resnet.py  transformer.py  variables.py
ASRdecoder/: .convert_from_tflite.py.un~  ASR_decoder_Ver2.0.py  PNC_ASR_Ver2.1.py  PNC_ASR_Ver2.2.py  convert_from_tflite.py  convert_from_tflite.py~  decoder_tflite.py  gui_decoder.py  mha_resnet.py  model_resnet.py  model_resnet_2.py  tkinter_example_1.py  tkinter_example_2.py
analysis_signal/: .check_input_wav.py.un~  analysis_signal_file.py  check_full_train_data.py  check_input_wav.py  check_input_wav.py~  check_wav_files.py  compare_wavs.py  confirm_wav_files.py  draw_multi_graphs.py  draw_single_graph.py  example.py  generate_text_file.py  modifying_data.py  read_pcm_files.py  signal_trigger.py  util_module.py
game_module/: aa.py
models/: .STFT_model.py.un~  .generate_feature_mat.py.un~  ResNeXt.py  ResNet.py  STFT_model.py  STFT_model.py~  generate_feature_mat.py  generate_feature_mat.py~
modify_wav/: augmented_traindata.py  check_files.py  command_mapping.py  find_files.py  make_STFT_train_data.py  (+2 more)
(+26 files in other folders)
